# congl

./: .gitignore  CMakeLists.txt  run.sh
include/glad/: glad.h
src/: glad.c  main.cpp
src/shaders/: vertex.glsl
src/shapes/: circle.cpp  circle.h  square.cpp  square.h
src/utils/: shader_loader.cpp  shader_loader.h
